# TB2J-OpenMX

./: .gitignore  .travis.yml  Changelog.md  README.md  pyproject.toml  requirements.txt  setup.py  upload_to_pip.sh
TB2J_OpenMX/: ffimod.py  ffiparser.py  gen_exchange.py  temporal_12345.input
TB2J_OpenMX/TB2J_results/: TB2J.pickle  exchange.out  summary.txt
TB2J_OpenMX/TB2J_results/Multibinit/: exchange.xml
TB2J_OpenMX/TB2J_results/TomASD/: exchange.exch  exchange.ucf
TB2J_OpenMX/TB2J_results/Vampire/: input  vampire.UCF  vampire.mat
examples/SrMnO3_FM_SOC/: .hks.c.swp  .openmx.dat.swp  getJ.sh  openmx.xyz
examples/SrMnO3_FM_SOC/TB2J_results/: TB2J.pickle  exchange.out  structure.vasp  summary.txt
examples/SrMnO3_FM_SOC/TB2J_results/ESPInS/: espins.in
examples/SrMnO3_FM_SOC/TB2J_results/Multibinit/: exchange.xml
examples/SrMnO3_FM_SOC/TB2J_results/TomASD/: exchange.exch  exchange.ucf
examples/SrMnO3_FM_SOC/TB2J_results/Vampire/: vampire.UCF  vampire.mat
scripts/: openmx2J.py
